@@ -15,14 +15,20 @@ package org.eclipse.syson.application.controllers.details.view;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.eclipse.sirius.components.forms.tests.FormEventPayloadConsumer.assertRefreshedFormThat;
 
+import com.jayway.jsonpath.JsonPath;
+
 import java.time.Duration;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 
 import org.eclipse.sirius.components.collaborative.forms.dto.FormRefreshedEventPayload;
+import org.eclipse.sirius.components.forms.Checkbox;
 import org.eclipse.sirius.components.forms.LabelWidget;
 import org.eclipse.sirius.components.forms.Textfield;
+import org.eclipse.sirius.components.forms.tests.graphql.HelpTextQueryRunner;
 import org.eclipse.sirius.components.forms.tests.navigation.FormNavigator;
 import org.eclipse.sirius.web.application.views.details.dto.DetailsEventInput;
 import org.eclipse.sirius.web.tests.graphql.DetailsEventSubscriptionRunner;
@@ -55,6 +61,9 @@ public class DetailsViewControllerIntegrationTests extends AbstractIntegrationTe
 
     @Autowired
     private DetailsEventSubscriptionRunner detailsEventSubscriptionRunner;
+
+    @Autowired
+    private HelpTextQueryRunner helpTextQueryRunner;
 
     @Autowired
     private RepresentationIdBuilder representationIdBuilder;
@@ -96,4 +105,71 @@ public class DetailsViewControllerIntegrationTests extends AbstractIntegrationTe
 
     }
 
+    @Test
+    @DisplayName("GIVEN a PartUsage, WHEN we request the help text, THEN the help text is send")
+    @Sql(scripts = { SimpleProjectElementsTestProjectData.SCRIPT_PATH }, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
+            config = @SqlConfig(transactionMode = SqlConfig.TransactionMode.ISOLATED))
+    @Sql(scripts = { "/scripts/cleanup.sql" }, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD, config = @SqlConfig(transactionMode = SqlConfig.TransactionMode.ISOLATED))
+    public void givenAPartUsageWhenWeRequestHelpTextThenHelpTextIsSend() {
+        var detailsRepresentationId = this.representationIdBuilder.buildDetailsRepresentationId(List.of(SimpleProjectElementsTestProjectData.SemanticIds.PART_ID));
+        var input = new DetailsEventInput(UUID.randomUUID(), SimpleProjectElementsTestProjectData.EDITING_CONTEXT_ID, detailsRepresentationId);
+        var flux = this.detailsEventSubscriptionRunner.run(input).filter(FormRefreshedEventPayload.class::isInstance);
+
+        var isCompositeWidgetId = new AtomicReference<String>();
+        var isReferenceWidgetId = new AtomicReference<String>();
+        var isPortionWidgetId = new AtomicReference<String>();
+        Consumer<Object> formContentConsumer = assertRefreshedFormThat(form -> {
+            var isCompositeWidget = new FormNavigator(form).page("Advanced").group("Part Properties").findWidget("Is Composite", Checkbox.class);
+            var isReferenceWidget = new FormNavigator(form).page("Advanced").group("Part Properties").findWidget("Is Reference", Checkbox.class);
+            var isPortionWidget = new FormNavigator(form).page("Advanced").group("Part Properties").findWidget("Is Portion", Checkbox.class);
+            assertThat(isCompositeWidget).isNotNull();
+            assertThat(isReferenceWidget).isNotNull();
+            isCompositeWidgetId.set(isCompositeWidget.getId());
+            isReferenceWidgetId.set(isReferenceWidget.getId());
+            isPortionWidgetId.set(isPortionWidget.getId());
+        });
+
+        Runnable requestIsCompositeHelpText = () -> {
+            Map<String, Object> variables = Map.of(
+                    "editingContextId", SimpleProjectElementsTestProjectData.EDITING_CONTEXT_ID,
+                    "representationId", detailsRepresentationId,
+                    "widgetId", isCompositeWidgetId.get()
+            );
+            var result = this.helpTextQueryRunner.run(variables);
+
+            String helpText = JsonPath.read(result, "$.data.viewer.editingContext.representation.description.helpText");
+            assertThat(helpText).isEqualTo("Opposite value of isReference");
+        };
+
+        Runnable requestIsReferenceHelpText = () -> {
+            Map<String, Object> variables = Map.of(
+                    "editingContextId", SimpleProjectElementsTestProjectData.EDITING_CONTEXT_ID,
+                    "representationId", detailsRepresentationId,
+                    "widgetId", isReferenceWidgetId.get()
+            );
+            var result = this.helpTextQueryRunner.run(variables);
+
+            String helpText = JsonPath.read(result, "$.data.viewer.editingContext.representation.description.helpText");
+            assertThat(helpText).isEqualTo("Opposite value of isComposite (cannot be edited, edit isComposite instead)");
+        };
+        Runnable requestIsPortionHelpText = () -> {
+            Map<String, Object> variables = Map.of(
+                    "editingContextId", SimpleProjectElementsTestProjectData.EDITING_CONTEXT_ID,
+                    "representationId", detailsRepresentationId,
+                    "widgetId", isPortionWidgetId.get()
+            );
+            var result = this.helpTextQueryRunner.run(variables);
+
+            String helpText = JsonPath.read(result, "$.data.viewer.editingContext.representation.description.helpText");
+            assertThat(helpText).isEmpty();
+        };
+
+        StepVerifier.create(flux)
+                .consumeNextWith(formContentConsumer)
+                .then(requestIsCompositeHelpText)
+                .then(requestIsReferenceHelpText)
+                .then(requestIsPortionHelpText)
+                .thenCancel()
+                .verify(Duration.ofSeconds(10));
+    }
 }
